--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,10 +34,10 @@ jobs:
         path: node_modules
         key: ${{ matrix.os }}-deps
 
-    - name: Dependencies
+    - name: Install Dependencies
       run: yarn --network-concurrency 1
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Package
       run: npm pack      
