--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,7 +28,7 @@ jobs:
         registry-url: "https://npm.pkg.github.com"
         scope: "@vex-chat"
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.CI_KEY }}
 
     - name: Setup Cache
       uses: actions/cache@v1
