--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,10 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
+        always-auth: true
         node-version: ${{ matrix.node-version }}
+        registry-url: "https://npm.pkg.github.com"
+        scope: "@vex-chat"
 
     - name: Setup Cache
       uses: actions/cache@v1
@@ -31,8 +34,10 @@ jobs:
         path: node_modules
         key: ${{ matrix.os }}-deps
 
-    - name: Dependencies
+    - name: Install Dependencies
       run: yarn --network-concurrency 1
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.CI_KEY }}
 
     - name: Package
       run: npm pack      
