--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "crypto-js",
-    "version": "0.6.0",
+    "version": "0.7.0",
     "description": "Crypto functions for vex",
     "main": "./dist/index.js",
     "author": "Extra <extrahash@protonmail.com>",
@@ -37,12 +37,15 @@
         "@types/create-hmac": "^1.1.0",
         "@types/ed2curve": "^0.2.2",
         "@types/msgpack-lite": "^0.1.7",
+        "@vex-chat/types-js": "^0.7.0",
         "bip39": "^3.0.3",
         "create-hmac": "^1.1.7",
         "ed2curve": "^0.3.0",
         "futoin-hkdf": "^1.3.2",
         "msgpack-lite": "^0.1.26",
-        "tweetnacl": "^1.0.3",
-        "xchat-types": "^0.6.7"
+        "tweetnacl": "^1.0.3"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/"
     }
 }
