--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Crypto functions for vex",
     "main": "./dist/index.js",
     "author": "Extra <extrahash@protonmail.com>",
-    "license": "UNLICENSED",
+    "license": "AGPL-3.0-or-later",
     "scripts": {
         "start": "node ./dist/index.js",
         "build": "rm -rf ./dist/*; node ./node_modules/typescript/bin/tsc",
