--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
         "@types/create-hmac": "^1.1.0",
         "@types/ed2curve": "^0.2.2",
         "@types/msgpack-lite": "^0.1.7",
+        "@types/pbkdf2": "^3.1.0",
         "@vex-chat/types": "^0.7.21",
         "bip39": "^3.0.3",
         "create-hmac": "^1.1.7",
         "ed2curve": "^0.3.0",
         "futoin-hkdf": "^1.3.2",
         "msgpack-lite": "^0.1.26",
+        "pbkdf2": "^3.1.1",
         "tweetnacl": "^1.0.3"
     }
 }
