--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "prettier": "^1.19.1",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
+        "typedoc": "^0.19.2",
         "typescript": "^3.7.2"
     },
     "lint-staged": {
