--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
         "prepack": "yarn build",
         "prettier": "node ./node_modules/prettier/bin-prettier.js '**/*.{ts,tsx,json,md}' --tab-width 4 --trailing-comma es5 --ignore-path .gitignore  --arrow-parens always --write",
         "lint": "./node_modules/tslint/bin/tslint src/**/*.ts{,x}",
-        "lint-fix": "./node_modules/tslint/bin/tslint src/**/*.ts{,x} --fix"
+        "lint-fix": "./node_modules/tslint/bin/tslint src/**/*.ts{,x} --fix",
+        "test": "npx jest"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.166",
+        "@types/uuid": "^8.3.0",
         "husky": "^3.1.0",
+        "jest": "^26.6.3",
         "lint-staged": "^9.5.0",
+        "lodash": "^4.17.20",
         "prettier": "^1.19.1",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
@@ -46,6 +51,7 @@
         "futoin-hkdf": "^1.3.2",
         "msgpack-lite": "^0.1.26",
         "pbkdf2": "^3.1.1",
+        "ts-jest": "^26.4.4",
         "tweetnacl": "^1.0.3"
     }
 }
