--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "lint": "./node_modules/tslint/bin/tslint src/**/*.ts{,x}",
         "lint-fix": "./node_modules/tslint/bin/tslint src/**/*.ts{,x} --fix",
         "test": "npx jest",
-        "docs": "npx tsdoc --out docs ./src/index.ts"
+        "docs": "npx typedoc"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.166",
