--- a/package.json
+++ b/package.json
@@ -1,62 +1,61 @@
 {
-    "name": "@vex-chat/crypto",
-    "version": "0.7.18",
-    "description": "Crypto functions for vex",
-    "main": "./dist/index.js",
-    "author": "Extra <extrahash@protonmail.com>",
-    "license": "AGPL-3.0-or-later",
-    "scripts": {
-        "start": "node ./dist/index.js",
-        "build": "rm -rf ./dist/*; node ./node_modules/typescript/bin/tsc",
-        "prepack": "yarn build",
-        "prettier": "node ./node_modules/prettier/bin-prettier.js '**/*.{ts,tsx,json,md}' --tab-width 4 --trailing-comma es5 --ignore-path .gitignore  --arrow-parens always --write",
-        "lint": "./node_modules/tslint/bin/tslint src/**/*.ts{,x}",
-        "lint-fix": "./node_modules/tslint/bin/tslint src/**/*.ts{,x} --fix",
-        "test": "npx jest",
-        "docs": "npx typedoc"
-    },
-    "devDependencies": {
-        "@types/lodash": "^4.14.166",
-        "@types/uuid": "^8.3.0",
-        "husky": "^3.1.0",
-        "jest": "^26.6.3",
-        "lint-staged": "^9.5.0",
-        "lodash": "^4.17.20",
-        "prettier": "^1.19.1",
-        "ts-jest": "^26.4.4",
-        "tslint": "^5.20.1",
-        "tslint-config-prettier": "^1.18.0",
-        "typedoc": "^0.19.2",
-        "typedoc-plugin-no-inherit": "^1.2.0",
-        "typescript": "^3.7.2"
-    },
-    "lint-staged": {
-        "src/**/*.{ts}": [
-            "./node_modules/tslint/bin/tslint -c tslint.json --fix",
-            "git add"
-        ]
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "yarn prettier; git add --all; lint-staged"
-        }
-    },
-    "dependencies": {
-        "@stablelib/base64": "^1.0.0",
-        "@stablelib/utf8": "^1.0.0",
-        "@types/create-hmac": "^1.1.0",
-        "@types/ed2curve": "^0.2.2",
-        "@types/msgpack-lite": "^0.1.7",
-        "@types/pbkdf2": "^3.1.0",
-        "@types/sha.js": "^2.4.0",
-        "@vex-chat/types": "^0.7.21",
-        "bip39": "^3.0.3",
-        "create-hmac": "^1.1.7",
-        "ed2curve": "^0.3.0",
-        "futoin-hkdf": "^1.3.2",
-        "msgpack-lite": "^0.1.26",
-        "pbkdf2": "^3.1.1",
-        "sha.js": "^2.4.11",
-        "tweetnacl": "^1.0.3"
-    }
+  "name": "@vex-chat/crypto",
+  "version": "0.8.0",
+  "description": "Crypto primitives for Vex",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "author": "Extra <extrahash@protonmail.com>",
+  "license": "AGPL-3.0-or-later",
+  "scripts": {
+    "build": "rimraf dist && tsc",
+    "prepack": "yarn build",
+    "prettier": "prettier '**/*.{ts,tsx,json,md}' --ignore-path .gitignore --write",
+    "lint": "eslint src/**/*.ts",
+    "lint-fix": "eslint src/**/*.ts --fix",
+    "push": "yarn build && yalc push",
+    "prepublish": "yarn build",
+    "test": "npx jest --runInBand --forceExit"
+  },
+  "dependencies": {
+    "@stablelib/base64": "^1.0.1",
+    "@stablelib/utf8": "^1.0.1",
+    "@vex-chat/types": "file:.yalc/@vex-chat/types",
+    "bip39": "^3.1.0",
+    "ed2curve": "^0.3.0",
+    "msgpackr": "^1.10.1",
+    "tweetnacl": "^1.0.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/create-hmac": "^1.1.3",
+    "@types/ed2curve": "^0.2.4",
+    "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.21",
+    "@types/node": "^25.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^9.0.0",
+    "jest": "^30.2.0",
+    "lint-staged": "^15.2.0",
+    "lodash": "^4.17.21",
+    "prettier": "^3.2.0",
+    "rimraf": "^5.0.0",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.7.0"
+  },
+  "lint-staged": {
+    "src/**/*.{ts}": [
+      "eslint --fix"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vex-chat/libvex-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vex-chat/libvex-js/issues"
+  },
+  "homepage": "https://github.com/vex-chat/libvex-js#readme"
 }
